JavaScriptでのメディアクエリ

--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -455,16 +455,23 @@
                     */
                     tableCell.append(sub1_tableBlock);
                 } catch (error) {
-                    tableText = document.createElement('div');
-                    tableText.innerText = JSON.stringify(val_r.detail.Body.Intensity.Observation.Pref,null,'   ');
-                    tableText.style.whiteSpace = 'pre-wrap';
-                    tableText.style.fontFamily = 'MyricaM M, MyricaM N, MyricaM P, monospace';
-                    tableText.style.fontSize = 'small';
-                    tableText.dataset.fontlist0 = 'https://myrica.estable.jp/myricamhistry/';
-                    tableText.dataset.fontlist1 = 'https://myrica.estable.jp/myricamhistry/';
-                    tableText.dataset.fontlist2 = 'https://myrica.estable.jp/myricamhistry/';
-                    tableText.dataset.fontlist3 = 'https://en.wikipedia.org/wiki/Monospace_%28typeface%29';
-                    tableCell.append(tableText);
+                    /*
+                     * JavaScriptでのメディアクエリ、matchMedia()の使い方を解説
+                     * https://coliss.com/articles/build-websites/operation/javascript/javascript-media-queries.html
+                    */
+                    const mediaQuery = window.matchMedia('screen and (orientation: landscape)');
+                    if (mediaQuery.matches) {
+                        tableText = document.createElement('div');
+                        tableText.innerText = JSON.stringify(val_r.detail.Body.Intensity.Observation.Pref,null,'   ');
+                        tableText.style.whiteSpace = 'pre-wrap';
+                        tableText.style.fontFamily = 'MyricaM M, MyricaM N, MyricaM P, monospace';
+                        tableText.style.fontSize = 'small';
+                        tableText.dataset.fontlist0 = 'https://myrica.estable.jp/myricamhistry/';
+                        tableText.dataset.fontlist1 = 'https://myrica.estable.jp/myricamhistry/';
+                        tableText.dataset.fontlist2 = 'https://myrica.estable.jp/myricamhistry/';
+                        tableText.dataset.fontlist3 = 'https://en.wikipedia.org/wiki/Monospace_%28typeface%29';
+                        tableCell.append(tableText);
+                    }
 
                     console.error(error);
                 }
