セル結合解除、MaxInt入れ直し

--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -402,7 +402,9 @@
     
                             sub1_tableCell = document.createElement('td');
                             sub1_tableCell.innerText = sub1_val_r[key1].Name;
-                            sub1_tableCell.rowSpan = sub1_val_r[key1].Area.length;
+                            sub1_tableLine.append(sub1_tableCell);
+                            sub1_tableCell = document.createElement('td');
+                            sub1_tableCell.innerText = sub1_val_r[key1].MaxInt;
                             sub1_tableLine.append(sub1_tableCell);
     
                             sub1_tableMeta.append(sub1_tableLine);
