--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -326,6 +326,7 @@
                         sub1_tableLine = document.createElement('tr');
                         sub1_tableCell = document.createElement('td');
                         sub1_tableCell.innerText = val_r.detail.Body.Intensity.Observation.Pref[key1].Name;
+                        sub1_tableCell.style.textAlign='center';
                         sub1_tableLine.append(sub1_tableCell);
 
                         sub1_tableMeta.append(sub1_tableLine);
@@ -372,6 +373,7 @@
                         sub1_tableLine = document.createElement('tr');
                         sub1_tableCell = document.createElement('td');
                         sub1_tableCell.innerText = val_r.detail.Body.Intensity.Observation.Pref[key1].MaxInt;
+                        sub1_tableCell.style.textAlign='right';
                         sub1_tableLine.append(sub1_tableCell);
 
                         sub1_tableMeta.append(sub1_tableLine);
