--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -312,18 +312,23 @@
                 tableLine.append(tableCell);
                 tableCell = document.createElement('td');
                 Object.keys(val_r.detail.Body.Intensity.Observation.Pref).forEach(function(key1) {
+                    sub1_tableLine = document.createElement('div');
                     console.debug( val_r.detail.Body.Intensity.Observation.Pref[key1].Name );
                     sub1_tableCell = document.createElement('div');
                     sub1_tableCell.innerText = val_r.detail.Body.Intensity.Observation.Pref[key1].Name;
                     sub1_tableCell.style.textAlign='center';
+                    sub1_tableLine.append(sub1_tableCell);
                 });
+                tableCell.append(sub1_tableLine);
                 tableLine.append(tableCell);
                 tableCell = document.createElement('td');
                 Object.keys(val_r.detail.Body.Intensity.Observation.Pref).forEach(function(key1) {
+                    sub1_tableLine = document.createElement('div');
                     console.debug( val_r.detail.Body.Intensity.Observation.Pref[key1].MaxInt );
                     sub1_tableCell = document.createElement('div');
                     sub1_tableCell.innerText = val_r.detail.Body.Intensity.Observation.Pref[key1].MaxInt;
                     sub1_tableCell.style.textAlign='right';
+                    sub1_tableLine.append(sub1_tableCell);
                 });
                 tableLine.append(tableCell);
 
