5d73c117ef8ab1b71144f944f763cbd9aa8e8115

--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -330,6 +330,7 @@
                     sub1_tableCell.style.textAlign='right';
                     sub1_tableLine.append(sub1_tableCell);
                 });
+                tableCell.append(sub1_tableLine);
                 tableLine.append(tableCell);
 
                 tableMeta.append(tableLine);
