--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -317,7 +317,7 @@
                     sub1_tableCell = document.createElement('div');
                     sub1_tableCell.innerText = val_r.detail.Body.Intensity.Observation.Pref[key1].Name;
                     sub1_tableCell.style.textAlign='center';
-                    sub1_tableLine.append(sub1_tableCell);
+                    tableCell.append(sub1_tableCell);
                 });
                 tableCell.append(sub1_tableLine);
                 tableLine.append(tableCell);
@@ -328,7 +328,7 @@
                     sub1_tableCell = document.createElement('div');
                     sub1_tableCell.innerText = val_r.detail.Body.Intensity.Observation.Pref[key1].MaxInt;
                     sub1_tableCell.style.textAlign='right';
-                    sub1_tableLine.append(sub1_tableCell);
+                    tableCell.append(sub1_tableCell);
                 });
                 tableCell.append(sub1_tableLine);
                 tableLine.append(tableCell);
