引数にnullが渡されたら消す

--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -125,6 +125,11 @@
             return JSON.parse(eqvol);
         }
         function set_gsso(credential) {
+            if ( credential == null ) {
+                sessionStorage.removeItem( (btoa(location.href)).slice(0, 16) + '.google-sso' );
+                localStorage.removeItem( (btoa(location.href)).slice(0, 16) + '.google-sso' );
+                return false;
+            }
             if ( isArray( credential ) ) {
                 credential = JSON.stringify( credential );
             }
