--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -41,6 +41,7 @@
                         });
                     } else {
                         set_gsso(null);
+                        return false;
                     }
 
                 } else {
