--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -297,11 +297,17 @@
                 console.log(val_r.detail.Body);
                 tableLine = document.createElement('tr');
                 tableCell = document.createElement('td');
+                tableCell.classList.add('priv');
                 tableText = document.createElement('input');
+                tableText.classList.add('priv');
                 tableText.value = '手動発報';
                 tableText.type = 'button';
                 tableText.dataset.eventid = val_r.detail.Head.EventID;
                 tableText.setAttribute('onclick', 'issueAlert(this)');
+                if ( isset(get_gsso().email) && !( get_gsso().email == null ) ) {
+                } else {
+                    tableText.disabled = 'disabled';
+                }
                 tableCell.append(tableText);
                 tableText = document.createComment(JSON.stringify(val_r));
                 tableCell.append(tableText);
