--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -304,10 +304,12 @@
                 tableText.type = 'button';
                 tableText.dataset.eventid = val_r.detail.Head.EventID;
                 tableText.setAttribute('onclick', 'issueAlert(this)');
-                if ( isset(get_gsso().email) && !( get_gsso().email == null ) ) {
-                } else {
-                    tableText.disabled = 'disabled';
-                }
+                try {
+                    if ( isset(get_gsso().email) && !( get_gsso().email == null ) ) {
+                    } else {
+                        tableText.disabled = 'disabled';
+                    }
+                } catch (error) {}
                 tableCell.append(tableText);
                 tableText = document.createComment(JSON.stringify(val_r));
                 tableCell.append(tableText);
