td.priv display none

--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -406,6 +406,9 @@
             white-space:nowrap;
             vertical-align: top;
         }
+        td.priv {
+            display: none;
+        }
         @media screen and (orientation: portrait) {
             .display_landscape {
                 display: none;
