--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -282,19 +282,27 @@
             tableBlock.classList.add('content');
             tableBlock.border = 1;
             tableMeta = document.createElement('thead');
-            arrayList = [];
-            arrayList.push('▶');
-            arrayList.push('地震検知日時');
-            arrayList.push('震央地名');
-            arrayList.push('最大震度');
-            arrayList.push('各地の震度');
-            arrayList.push('各地の震度');
             tableLine = document.createElement('tr');
-            arrayList.map(function(val) {
-                tableCell = document.createElement('th');
-                tableCell.innerText = val;
-                tableLine.append(tableCell);
-            });
+            tableCell = document.createElement('th');
+            tableCell.innerText = '▶';
+            tableCell.classList.add('priv');
+            tableLine.append(tableCell);
+            tableCell = document.createElement('th');
+            tableCell.innerText = '地震検知日時';
+            tableLine.append(tableCell);
+            tableCell = document.createElement('th');
+            tableCell.innerText = '震央地名';
+            tableLine.append(tableCell);
+            tableCell = document.createElement('th');
+            tableCell.innerText = '最大震度';
+            tableLine.append(tableCell);
+            tableCell = document.createElement('th');
+            tableCell.innerText = '各地の震度';
+            tableLine.append(tableCell);
+            tableCell = document.createElement('th');
+            tableCell.innerText = '各地の震度';
+            tableLine.append(tableCell);
+            arrayList.map(function(val) {});
             tableMeta.append(tableLine);
             tableBlock.append(tableMeta);
             wrapLine.append(tableBlock);
