--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -414,7 +414,7 @@
             white-space:nowrap;
             vertical-align: top;
         }
-        td.priv {
+        th.priv, td.priv {
             display: none;
         }
         @media screen and (orientation: portrait) {
