--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -297,10 +297,10 @@
             tableCell.innerText = '最大震度';
             tableLine.append(tableCell);
             tableCell = document.createElement('th');
-            tableCell.innerText = '各地の震度';
+            tableCell.innerText = '都道府県';
             tableLine.append(tableCell);
             tableCell = document.createElement('th');
-            tableCell.innerText = '各地の震度';
+            tableCell.innerText = '震度';
             tableLine.append(tableCell);
             arrayList.map(function(val) {});
             tableMeta.append(tableLine);
