.grecaptcha-badge{ opacity: 0; }

--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -398,6 +398,11 @@
         }, 1000*10);
     </script>
     <style>
+        .grecaptcha-badge{
+            opacity: 0;
+        }
+    </style>
+    <style>
         html {
             height: 100%;
         }
