--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -372,6 +372,9 @@
             wrapLine.append(tableBlock);
             root_body.append(wrapLine);
         }
+        function setChassisWidth(width=0) {
+            
+        }
     </script>
     <script>
         window.addEventListener('load', function() {
