to Int "function setChassisWidth a393cd49"

--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -373,7 +373,9 @@
             root_body.append(wrapLine);
         }
         function setChassisWidth(width=0) {
-            
+            /* to Int */
+            width=parseInt(width, 10);
+
         }
     </script>
     <script>
