--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -384,7 +384,8 @@
                     document.getElementById('eqvol').offsetWidth
                 );
             }
-            
+
+            document.getElementsByTagName('body')[0].style.width=(width+'px');
         }
     </script>
     <script>
