function getFeedXML_eqvol の最後に実行
function setChassisWidth a393cd49

--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -210,6 +210,7 @@
                     console.log( JSON.parse(xhr.responseText) );
                     set_eqvol( JSON.parse(xhr.responseText) );
                     listup_eqvol( JSON.parse(xhr.responseText) );
+                    setChassisWidth();
                 } else {
                     console.debug( [xhr.responseText,xhr.readyState,xhr.status] );
                 }
