書き換え by JS meta name="viewport"
function setChassisWidth a393cd49

--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -387,6 +387,9 @@
             }
 
             document.getElementsByTagName('body')[0].style.width=(width+'px');
+            document.querySelectorAll('meta[name="viewport"]').forEach(function(elm){
+                elm.content=('width='+width);
+            });
         }
     </script>
     <script>
