--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -224,12 +224,12 @@
                     xhr_responseText = JSON.parse(xhr.responseText);
                     sha256(xhr_responseText).then(function(hash){
                         console.debug(hash);
-                        sessionStorage.setItem( (btoa(location.href)).slice(0, 16) + '.eqvol_hash', hash);
                         xhr_responseText.hash = hash;
                     });
                     set_eqvol( xhr_responseText );
                     listup_eqvol( xhr_responseText );
                     setChassisWidth();
+                    sessionStorage.setItem( (btoa(location.href)).slice(0, 16) + '.eqvol_hash', xhr_responseText.hash);
                 } else {
                     console.debug( [xhr.responseText,xhr.readyState,xhr.status] );
                 }
