--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -139,10 +139,11 @@
         }
         function set_eqvol(eqvol) {
             eqvol = JSON.stringify(eqvol);
-            return sessionStorage.setItem(
-                (btoa(location.href)).slice(0, 16) + '.eqvol',
-                eqvol
-            );
+            sha256(xhr_responseText).then(function(hash){
+                sessionStorage.setItem( (btoa(location.href)).slice(0, 16) + '.eqvol_hash', eqvol );
+            });
+            sessionStorage.setItem( (btoa(location.href)).slice(0, 16) + '.eqvol', eqvol );
+            return sessionStorage.getItem( (btoa(location.href)).slice(0, 16) + '.eqvol' );
         }
         function get_eqvol(eqvol) {
             eqvol = sessionStorage.getItem( (btoa(location.href)).slice(0, 16) + '.eqvol' );
@@ -222,12 +223,12 @@
                     console.debug( xhr.responseText );
                     console.log( JSON.parse(xhr.responseText) );
                     xhr_responseText = JSON.parse(xhr.responseText);
+                    sha256_text = '';
                     sha256(xhr_responseText).then(function(hash){
                         console.debug(hash);
-                        xhr_responseText.hash = hash;
+                        sha256_text = hash;
                     });
-                    set_eqvol( xhr_responseText );
-                    listup_eqvol( xhr_responseText );
+                    listup_eqvol( set_eqvol( xhr_responseText ) );
                     setChassisWidth();
                     sessionStorage.setItem( (btoa(location.href)).slice(0, 16) + '.eqvol_hash', xhr_responseText.hash);
                 } else {
