--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -139,10 +139,11 @@
         }
         function set_eqvol(eqvol) {
             eqvol = JSON.stringify(eqvol);
-            return sessionStorage.setItem(
-                (btoa(location.href)).slice(0, 16) + '.eqvol',
-                eqvol
-            );
+            sha256(eqvol).then(function(hash){
+                sessionStorage.setItem( (btoa(location.href)).slice(0, 16) + '.eqvol_hash', hash );
+            });
+            sessionStorage.setItem( (btoa(location.href)).slice(0, 16) + '.eqvol', eqvol );
+            return sessionStorage.getItem( (btoa(location.href)).slice(0, 16) + '.eqvol' );
         }
         function get_eqvol(eqvol) {
             eqvol = sessionStorage.getItem( (btoa(location.href)).slice(0, 16) + '.eqvol' );
