console.log( 'eqvol_hash == hash' );

--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -227,6 +227,7 @@
                     sha256(xhr_responseText).then(function(hash){
                         console.debug(hash);
                         eqvol_hash = hash;
+                        console.log( 'eqvol_hash == hash', eqvol_hash == hash );
                     }).catch(function(e) {
                         console.warn(e);
                     });
